<resources>
    <string name="app_name">Comm Bank Task</string>

    <string name="no_connection">No Internet Connection.</string>
    <string name="need_connection">Please Double Check Your Internet Or Network Connection.</string>

    <string name="show_all_employees">Show All Employees</string>
    <string name="age">Age</string>
    <string name="salary">Salary</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="employee_list">Employee List</string>

    <string name="employeeId">ID : %1$s</string>
    <string name="employeeName">Name : %1$s/10</string>
    <string name="employeeSalary">Salary : %1$s</string>
    <string name="employeeAge">Age : %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_employee">Edit Employee</string>
</resources>