<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.abkhrr.comm.bank.presentation.main.viewmodel.InsertEmployeeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f7c00a"
        tools:context=".presentation.main.fragment.insert.FragmentInsertEmployee">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="10dp"
                app:hintEnabled="false"
                app:boxBackgroundColor="@color/white"
                app:hintTextColor="@android:color/darker_gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_name"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:padding="14dp"
                    android:hint="@string/name"
                    android:textAlignment="center"
                    android:inputType="textPersonName|textEmailAddress"
                    android:textColorHint="@android:color/darker_gray"
                    android:textSize="14sp"  />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/salaryTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="10dp"
                app:hintEnabled="false"
                app:boxBackgroundColor="@color/white"
                app:hintTextColor="@android:color/darker_gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_salary"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:padding="14dp"
                    android:hint="@string/salary"
                    android:textAlignment="center"
                    android:inputType="textPersonName|textEmailAddress"
                    android:textColorHint="@android:color/darker_gray"
                    android:textSize="14sp"  />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/AgeTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="10dp"
                app:hintEnabled="false"
                app:boxBackgroundColor="@color/white"
                app:hintTextColor="@android:color/darker_gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_age"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:padding="14dp"
                    android:hint="@string/age"
                    android:textAlignment="center"
                    android:inputType="textPersonName|textEmailAddress"
                    android:textColorHint="@android:color/darker_gray"
                    android:textSize="14sp"  />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSubmit"
                android:layout_width="match_parent"
                android:textAllCaps="false"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="50dp"
                android:layout_marginStart="50dp"
                android:textSize="12sp"
                android:insetBottom="0dp"
                android:insetLeft="0dp"
                android:insetRight="0dp"
                android:insetTop="0dp"
                android:backgroundTint="#000000"
                app:cornerRadius="4dp"
                android:text="@string/submit"
                android:fontFamily="sans-serif-medium" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonShowAllEmployee"
            android:layout_width="0dp"
            android:textAllCaps="false"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textSize="12sp"
            android:insetBottom="0dp"
            android:insetLeft="0dp"
            android:insetRight="0dp"
            android:insetTop="0dp"
            android:backgroundTint="#3f77c2"
            app:cornerRadius="0dp"
            android:text="@string/show_all_employees"
            android:fontFamily="sans-serif-medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>